# artl-mcp

./: .gitignore  API_RATE_LIMITING_WORKAROUNDS.md  CBORG.md  DEVELOPERS.md  EMAIL_REQUIREMENTS.md  FILE_MANAGEMENT.md  IDENTIFIER_HANDLING.md  Makefile  PDF_CONVERSION_ANALYSIS.md  PREREQUISITES.md  README.md  RELEASE.md  TESTING_COMMANDS.md  TESTING_PROGRESS_FULL_FINAL_WITH_STANDARDS.md  USERS.md  claude-mcp-config.json  main.py  pyproject.toml
.github/workflows/: pypi-publish.yaml  python-package.yml
local/: .env.template  claude-demo-full-text.txt  claude-demo-identifiers-save.txt  claude-demo-paper-metadata-save.txt  claude-demo-search-with-save.txt  europe-pmc-core.json  europe-pmc-lite.json  x.json
notebooks/: test.ipynb
side-projects/: PARAMETER_STANDARDS.md  api_test_urls.md  paper_identifiers.md  test_metadata.json
src/allroadstoliterature/: client.py  main.py  mcp_client.py  mcp_servers.py  mcps.py  tools.py
src/artl_mcp/: _version.py  cli.py  client.py  main.py  tools.py
src/artl_mcp/utils/: config_manager.py  doi_fetcher.py  email_manager.py  file_manager.py  identifier_utils.py  pdf_fetcher.py  pubmed_utils.py
tests/: test_aurelian.py  test_cleanup_implementation.py  test_cli.py  test_client.py  test_decorators.py  test_email_manager.py  test_email_setup.py  test_main.py  test_main_actual.py  test_mcps.py  test_pdf_download_functions.py  test_pdf_fetcher.py  test_pubmed_utils.py  test_simplified_file_interface.py  test_tools.py  test_user_stories.py  test_windowing.py
