[project]
name = "all-roads-to-literature"
version = "0.1.0"
description = "PydanticAI and MCP approaches for getting textual representations of scientific literature from PMIDs, DOIs, etc."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.8.0",
    "pydantic-ai>=0.2.18",
]
