[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "all-roads-to-literature"
version = "0.1.0"
description = "PydanticAI and MCP approaches for getting textual representations of scientific literature from PMIDs, DOIs, etc."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.8.0",
    "habanero>=2.3.0",
    "pydantic-ai>=0.2.18",
    "pytest>=8.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["allroadstoliterature"]
# Remove the py-modules line entirely
