[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "artl-mcp"
dynamic = ["version"]
description = "PydanticAI and MCP approaches for getting textual representations of scientific literature from PMIDs, DOIs, etc."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mark Andrew Miller", email = "MAM@lbl.gov"},
    {name = "Justin Reese", email = "justaddcoffee@gmail.com"},

]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mcp", "scientific-literature", "pubmed", "doi", "pmid"]

# Main dependencies
dependencies = [
    "fastmcp>=2.8.1",
    "habanero>=2.3.0",
    "pdfminer-six>=20250506",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "pydantic>=2.0.0",
    "lxml>=4.6.0",
]

[project.urls]
Homepage = "https://github.com/contextualizer-ai/artl-mcp"
Repository = "https://github.com/contextualizer-ai/artl-mcp"
Issues = "https://github.com/contextualizer-ai/artl-mcp/issues"
Documentation = "https://github.com/contextualizer-ai/artl-mcp#readme"

[project.scripts]
artl-mcp = "artl_mcp.main:cli"

# Individual CLI tools for each function
artl-get-doi-metadata = "artl_mcp.cli:cli_get_doi_metadata"
artl-get-abstract-from-pubmed-id = "artl_mcp.cli:cli_get_abstract_from_pubmed_id"
artl-get-doi-fetcher-metadata = "artl_mcp.cli:cli_get_doi_fetcher_metadata"
artl-get-unpaywall-info = "artl_mcp.cli:cli_get_unpaywall_info"
artl-get-full-text-from-doi = "artl_mcp.cli:cli_get_full_text_from_doi"
artl-get-full-text-info = "artl_mcp.cli:cli_get_full_text_info"
artl-get-text-from-pdf-url = "artl_mcp.cli:cli_get_text_from_pdf_url"
artl-extract-pdf-text = "artl_mcp.cli:cli_extract_pdf_text"
artl-clean-text = "artl_mcp.cli:cli_clean_text"
artl-extract-doi-from-url = "artl_mcp.cli:cli_extract_doi_from_url"
artl-doi-to-pmid = "artl_mcp.cli:cli_doi_to_pmid"
artl-pmid-to-doi = "artl_mcp.cli:cli_pmid_to_doi"
artl-get-doi-text = "artl_mcp.cli:cli_get_doi_text"
artl-get-pmid-from-pmcid = "artl_mcp.cli:cli_get_pmid_from_pmcid"
artl-get-pmcid-text = "artl_mcp.cli:cli_get_pmcid_text"
artl-get-pmid-text = "artl_mcp.cli:cli_get_pmid_text"
artl-get-full-text-from-bioc = "artl_mcp.cli:cli_get_full_text_from_bioc"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/artl_mcp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/artl_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "tests",
    "README.md",
    "pyproject.toml",
]

# Development dependencies - all dev tools in one group
[dependency-groups]
dev = [
    # Code quality and formatting
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    # Testing
    "pytest>=8.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    # Build and packaging tools
    "hatch-vcs>=0.5.0",
    "hatchling>=1.27.0",
    "twine>=4.0.0",
    "hatch>=1.14.1",
    "types-requests>=2.32.4.20250611",
    "types-beautifulsoup4>=4.12.0.20250516",
]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["src/artl_mcp/_version.py"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Black configuration (if you prefer black over ruff format)
[tool.black]
line-length = 88
target-version = ['py311']

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
show_error_codes = true
# Ignore missing stubs for third-party libraries
ignore_missing_imports = true
# Be less strict about Any returns from third-party libraries
warn_return_any = false
# Allow some untyped functions for now
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Deptry configuration
[tool.deptry]
# Map import names to package names
package_module_name_map = {bs4 = "beautifulsoup4", pdfminer = "pdfminer-six"}

# Ignore specific error types for known false positives
[tool.deptry.per_rule_ignores]
DEP002 = ["lxml", "beautifulsoup4", "pdfminer-six"]  # lxml used by bs4; bs4/pdfminer are mapped imports
DEP003 = ["click"]          # Transitive dependency - used by fastmcp  
DEP001 = ["artl_mcp", "bs4", "pdfminer"]  # Missing deps: self-imports and mapped packages ok
